# selectsectors.com

./: .env.example  .gitignore  404.html  README.md  STATUS.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
api-docs/: index.html
changelog/: index.html
compare/: index.html
crates/backtest-core/: Cargo.toml
crates/backtest-core/src/: bars.rs  error.rs  lib.rs  metrics.rs
crates/backtest-core/src/strategies/: bollinger_bands.rs  breakout.rs  buy_and_hold.rs  mod.rs  momentum.rs  rsi_meanreversion.rs  sma_crossover.rs
disclaimer/: index.html
docs/: architecture.md
glossary/: index.html
learn/: index.html
learn/enums-and-dispatch/: index.html
learn/error-handling/: index.html
learn/ownership/: index.html
learn/this-sites-rust/: index.html
learn/wasm/: index.html
learn/why-rust/: index.html
netlify/functions/: backtest-background.mts  backtest.mts  (+12 more)
philosophy/: index.html
public/: robots.txt  sitemap.xml
quiz/: index.html
scan/: index.html
src/: chat.ts  compare.ts  dispatch.ts  glossary.ts  layout.ts  learn-enums-and-dispatch.ts  learn-error-handling.ts  learn-ownership.ts  learn-this-sites-rust.ts  learn-wasm.ts  learn-why-rust.ts  learn.ts  main.ts  not-found.ts  page-utils.ts  philosophy-backtest-vs-live.ts  quiz-landing.ts  quiz-quant-finance.ts  quiz-rust-basics.ts  quiz-rust-intermediate.ts  quiz-this-sites-rust.ts  quiz-wasm-internals.ts  quiz.ts  scan.ts  strategies-landing.ts  strategy-bollinger-bands.ts  strategy-breakout.ts  strategy-buy-and-hold.ts  strategy-momentum.ts  strategy-page.ts  strategy-rsi-mean-reversion.ts  strategy-sma-crossover.ts  strategy-specs.ts  style.css
strategies/: index.html
(+81 files in other folders)
